tests/e2e/mutation_expression.error
Error: syntax error in story at line 3, column 22

3|    b = a.contains(item: req.body["action"])
                           ^^^^^^^^^^^^^^^^^

E0131: `any` can't be dot-accessed with `body` of type `string`
